--- a/esdemo/package.json
+++ b/esdemo/package.json
@@ -7,23 +7,29 @@
     "babels": "babel-node app.js"
   },
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.6",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-print": "^2.0.1",
+    "gulp-webserver": "^0.9.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "babel-core": "^6.7.6",
-    "babel-polyfill": "^6.7.4"
+    "systemjs": "^0.19.26"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-preset-stage-2": "^6.5.0"
+    "babel-loader": "^6.2.4",
+    "babel-preset-stage-2": "^6.5.0",
+    "gulp-util": "^3.0.7",
+    "webpack": "^1.12.15"
   }
 }
